Make map-reduce able to be controlled by the API. Done the statistics page using map-reduce. Updated documentation and project assets.
